# labagentbench

./: CITATION.cff  README.md  index.html  pyproject.toml
docs/: index.html
docs/assets/: app.js  style.css
src/labagentbench/: algorithms.py  bo.py  cli.py  eval.py  hints.py  models.py  tasks.py
src/labagentbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
