[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labagentbench"
version = "0.1.0"
description = "Benchmark suite for human- and literature-informed Bayesian optimisation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Burhan Beycan"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "typer>=0.9",
  "rich>=13.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
labagentbench = "labagentbench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
